# esp32-sysmon-display

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: data.rs  lib.rs  receive.rs
src/logging/: device.rs
src/render/: common.rs  decider.rs  frame_mgr.rs  message.rs  metrics.rs  mod.rs  unsupported.rs
src/render/messages/: connect.rs  mod.rs  no_metrics.rs  unsupported_all.rs
src/sound/: beep.rs  mod.rs
src/usb/: data.rs  mod.rs  receive.rs
