[package]
edition      = "2024"
name         = "display"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "display"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "log-04", "unstable"] } 


esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log                    = "0.4.27"

critical-section = "1.2.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
usb-device = "0.3.2"
usbd-serial = "0.2.2"

postcard = {version = "1.1.3", default-features = false}
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
heapless = {version = "0.9.2", features = ["serde"]}

st7735-lcd ="0.10.0"
embedded-graphics = "0.8.2"
embedded-hal-bus = "0.3.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
